static/css/timetable/timetable.css
/* ... */
.result-text
{
    display:inline-block;
}

.page-title
{
    font-size:13px;
    line-height:12px;
    margin-bottom:10px;
}

.list-scroll
{
    -webkit-box-flex:1;
        -ms-flex:auto;
            flex:auto;
	margin-bottom:-10px;
    padding-bottom:4px;
    overflow-y:scroll;
	font-size:12px;
	line-height:11px;
}

.list-elem
{
    background-color:#EEEEEE;
    border-radius:4px;
    margin-bottom:6px;
		overflow:hidden;
}

.list-elem-title
{
    padding:8px 10px 6px 10px;
}

.list-elem-body-wrap
{
    padding:0px 10px 0px 18px;
}

.list-elem-body-wrap:hover
{
	background-color:#DDDDDD;
}

.list-elem-body
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:horizontal;
    -webkit-box-direction:normal;
        -ms-flex-direction:row;
            flex-direction:row;
	text-align:right;
    border-top:1px solid #C9C9C9;
    padding:6px 0px 6px 0px;
}

.list-elem-body-text
{
    -webkit-box-flex:1;
        -ms-flex:1;
            flex:1;
	text-align:left;
}

.list-elem-body-wrap:last-child > .list-elem-body
{
    padding-bottom:8px;
}

.add-to-cart
{
	background:url(/media/icons/add_cart.svg) no-repeat center center;
	width:12px;
	height:13px;
	display:inline-block;
	vertical-align:top;
	margin:-1px 0px -1px 6px;
}

.add-to-cart:hover
{
	background-image:url(/media/icons/add_cart_hover.svg);
	cursor:pointer;
}

.add-to-table
{
	background:url(/media/icons/add_table.svg) no-repeat center center;
	width:9px;
	height:11px;
	display:inline-block;
	vertical-align:top;
	margin-left:6px;
}

.add-to-table:hover
{
	background-image:url(/media/icons/add_table_hover.svg);
	cursor:pointer;
}

.delete-from-cart
{
	background:url(/media/icons/delete_cart.svg) no-repeat center center;
	width:12px;
	height:13px;
	display:inline-block;
	vertical-align:top;
	margin:-1px 0px -1px 0px;
}

.delete-from-cart:hover
{
	background-image:url(/media/icons/delete_cart_hover.svg);
	cursor:pointer;
}





/* Timetable tab at center */

#timetable-menu
{
    height:25px;
}

#timetable-tabs
{
    width:46em;
    height:2em;
}

.timetable-tab
{
    background-color:#E2E2E2;
    display:inline-block;
	vertical-align:top;
    height:25px;
    margin-right:6px;
    text-align:center;
    line-height:2em;
    border-radius:4px 4px 0 0;
    border:none;
    outline:none;
	font-size:11px;
	line-height:10px;
	padding:8px 10px 7px 10px;
    text-decoration:none;
}

.timetable-tab.active
{
    background-color:#FFFFFF;
}

.timetable-tab>.hidden-option
{
    display:none;
}

.timetable-tab:not(.active):hover
{
	cursor:pointer;
	background-color:#D8D8D8;
}

.timetable-tab.active>.hidden-option
{
    display:inline-block;
    color:#000000;
}

.timetable-add
{
	padding:7px 0 0 0;
    width:27px;
}

.timetable-num
{
    color:#000000;
}

.duplicate-table
{
	background: url(/media/icons/duplicate_table.svg) no-repeat center center;
	width:8px;
	height:10px;
	display:inline-block;
	vertical-align:top;
	margin-left:4px;
}

.duplicate-table:hover
{
	background-image: url(/media/icons/duplicate_table_hover.svg);
}

.delete-table
{
	background: url(/media/icons/delete_table.svg) no-repeat center center;
	width:9px;
	height:10px;
	display:inline-block;
	vertical-align:top;
	margin-left:4px;
}

.delete-table:hover
{
	background-image: url(/media/icons/delete_table_hover.svg);
}

.add-table
{
	background: url(/media/icons/add_table.svg) no-repeat center center;
	width:11px;
	height:11px;
	display:inline-block;
	vertical-align:top;
}



/* Timetable at center */

#timetable
{
    position:relative;
    clear:both;
    margin:0;
    padding:0;
    background-color:#FFFFFF;
    height:calc(100% - 2em);
    border-radius:0 6px 6px 6px;
    box-shadow: 0em 3px 0px 0em #F3BEC6;
}

#timetable-wrap
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:horizontal;
    -webkit-box-direction:normal;
        -ms-flex-direction:row;
            flex-direction:row;
    position:relative;
    float:left;
    display:inline-block;
	width:608px;
	width:calc(60vh + 8px);
    height:100%;
    margin-right:10px;
	padding:10px 0 10px 10px;
}

.chead
{
    height:17px;
    text-align:center;
    font-size:11px;
    line-height:10px;
}

.chead.chead-middle
{
    height:27px;
    padding-top:10px;
}

#rowheaders
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:vertical;
    -webkit-box-direction:normal;
        -ms-flex-direction:column;
            flex-direction:column;
    width:11px;
    margin-right:5px;
    height:100%;
}

.rhead
{
    -webkit-box-flex:1;
        -ms-flex:auto;
            flex:auto;
    position:relative;
    margin-top:1px;
    width:100%;
}

.rhead-bottom
{
    margin-bottom:1px;
}

.rheadtext
{
	width:100%;
	text-align:right;
	font-size:10px;
    position:absolute;
    -webkit-transform:translate(0,-50%);
            transform:translate(0,-50%);
}

#timetable-contents
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:horizontal;
    -webkit-box-direction:normal;
        -ms-flex-direction:row;
            flex-direction:row;
    height: 100%;
}

.day
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:vertical;
    -webkit-box-direction:normal;
        -ms-flex-direction:column;
            flex-direction:column;
    padding-left:3px;
    padding-right:3px;
    width:0;
    height:100%;
    -webkit-box-flex:1;
        -ms-flex:auto;
            flex:auto;
}

.cell1
{
    -webkit-box-flex:1;
        -ms-flex:auto;
            flex:auto;
    width:100%;
    border-top:1px solid #E2E2E2;
}

.cell2
{
    -webkit-box-flex:1;
        -ms-flex:auto;
            flex:auto;
    width:100%;
    border-top:1px dashed #E2E2E2;
}

.cell2.cell-bottom
{
    border-bottom:1px solid #E2E2E2;
}
/* ... */

